src/main/java/net/mobtalker/mobtalkerscript/v3/compiler/antlr/generated/Mts3Parser.java
/*
 * Copyright (C) 2013-2014 Chimaine
 *
 * This program is free software: you can redistribute it and/or modify it
 * under the terms of the GNU Lesser General Public License as published
 * by the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public License
 * along with this program. If not, see <http://www.gnu.org/licenses/>.
 */
// Generated from src/main/antlr/Mts3.g4 by ANTLR 4.4
package net.mobtalker.mobtalkerscript.v3.compiler.antlr.generated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

public class Mts3Parser extends Parser {
	public static final int
		AND=1, AS_CONCLUSION=2, AS=3, AT=4, BREAK=5, BOOLEAN=6, DO=7, ELSEIF=8, 
		ELSE=9, END=10, FADEOUT=11, FADEIN=12, FOR=13, FUNCTION=14, HIDE=15, IF=16, 
		IN=17, JUMP=18, LOCAL=19, LABEL=20, MENU=21, NIL=22, NOT=23, OFFSET=24, 
		OPTION=25, OR=26, PAUSE=27, MUSIC=28, SOUND=29, REPEAT=30, RETURN=31, 
		SAY=32, SCENE=33, SHOW=34, STOP=35, THEN=36, UNTIL=37, WHILE=38, WITH=39, 
		VARARGS=40, CONCAT=41, DOUBLECOLON=42, ROUND_OPEN=43, ROUND_CLOSE=44, 
		SQUARE_OPEN=45, SQUARE_CLOSE=46, CURLY_OPEN=47, CURLY_CLOSE=48, DOT=49, 
		COMMA=50, COLON=51, SEMICOLON=52, CMP_EQUAL=53, CMP_NEQUAL=54, CMP_LEQUAL=55, 
		CMP_GEQUAL=56, EQUALS=57, PLUS=58, MINUS=59, MUL=60, DIV=61, MOD=62, POW=63, 
		NUMSIGN=64, LESS=65, GREATER=66, NORMALSTRING=67, CHARSTRING=68, LONGSTRING=69, 
		INT=70, HEX=71, FLOAT=72, HEX_FLOAT=73, NAME=74, COMMENT=75, LINE_COMMENT=76, 
		WS=77, SHEBANG=78;
	public static final String[] tokenNames = {
		"<INVALID>", "'and'", "'as conclusion'", "'as'", "'at'", "'break'", "BOOLEAN", 
		"'do'", "ELSEIF", "'else'", "'end'", "'fadeout'", "'fadein'", "'for'", 
		"'function'", "'hide'", "'if'", "'in'", "'jump'", "'local'", "'label'", 
		"'menu'", "'nil'", "'not'", "'offset'", "'option'", "'or'", "'pause'", 
		"'play music'", "'play sound'", "'repeat'", "'return'", "'say'", "'scene'", 
		"'show'", "'stop music'", "'then'", "'until'", "'while'", "'with'", "'...'", 
		"'..'", "'::'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'.'", "','", 
		"':'", "';'", "'=='", "'~='", "'<='", "'>='", "'='", "'+'", "'-'", "'*'", 
		"'/'", "'%'", "'^'", "'#'", "'<'", "'>'", "NORMALSTRING", "CHARSTRING", 
		"LONGSTRING", "INT", "HEX", "FLOAT", "HEX_FLOAT", "NAME", "COMMENT", "LINE_COMMENT", 
		"WS", "SHEBANG"
	};
	public static final int
		RULE_chunk = 0, RULE_block = 1, RULE_expr = 2, RULE_literal = 3, RULE_exprList = 4, 
		RULE_string = 5, RULE_tableCtor = 6, RULE_field = 7, RULE_fieldList = 8, 
		RULE_stmt = 9, RULE_menuOption = 10, RULE_returnStmt = 11, RULE_breakStmt = 12, 
		RULE_args = 13, RULE_nameAndArgs = 14, RULE_funcName = 15, RULE_funcBody = 16, 
		RULE_paramList = 17, RULE_var = 18, RULE_varSuffix = 19, RULE_varOrExpr = 20, 
		RULE_varList = 21, RULE_nameList = 22;
	public static final String[] ruleNames = {
		"chunk", "block", "expr", "literal", "exprList", "string", "tableCtor", 
		"field", "fieldList", "stmt", "menuOption", "returnStmt", "breakStmt", 
		"args", "nameAndArgs", "funcName", "funcBody", "paramList", "var", "varSuffix", 
		"varOrExpr", "varList", "nameList"
	};

	@Override
	public String getGrammarFileName() { return "Mts3.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	public Mts3Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public static class ChunkContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(Mts3Parser.EOF, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ChunkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chunk; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Mts3Listener ) ((Mts3Listener)listener).enterChunk(this);
		}

	}

	@RuleVersion(0)
	public final ChunkContext chunk() throws RecognitionException {
		ChunkContext _localctx = new ChunkContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_chunk);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46); block();
			setState(47); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public BreakStmtContext breakStmt() {
			return getRuleContext(BreakStmtContext.class,0);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public List<? extends StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public ReturnStmtContext returnStmt() {
			return getRuleContext(ReturnStmtContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Mts3Listener ) ((Mts3Listener)listener).enterBlock(this);
		}

	}

	@RuleVersion(0)
	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DO) | (1L << FOR) | (1L << FUNCTION) | (1L << HIDE) | (1L << IF) | (1L << JUMP) | (1L << LOCAL) | (1L << MENU) | (1L << REPEAT) | (1L << SAY) | (1L << SCENE) | (1L << SHOW) | (1L << WHILE) | (1L << DOUBLECOLON) | (1L << ROUND_OPEN) | (1L << SEMICOLON))) != 0) || _la==NAME) {
				{
				{
				setState(49); stmt();
				}
				}
				setState(54);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(57);
			switch (_input.LA(1)) {
			case RETURN:
				{
				setState(55); returnStmt();
				}
				break;
			case BREAK:
				{
				setState(56); breakStmt();
				}
				break;
			case EOF:
			case ELSEIF:
			case ELSE:
			case END:
			case OPTION:
			case UNTIL:
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public int nResults =  1;
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
			this.nResults = ctx.nResults;
		}
	}
	public static class FunctionDefinitionExprContext extends ExprContext {
		public FuncBodyContext Body;
		public FuncBodyContext funcBody() {
			return getRuleContext(FuncBodyContext.class,0);
		}
		public FunctionDefinitionExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Mts3Listener ) ((Mts3Listener)listener).enterFunctionDefinitionExpr(this);
		}

	}
	public static class BinaryExprContext extends ExprContext {
		public ExprContext Left;
		public Token Operator;
		public ExprContext Right;
		public List<? extends ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public BinaryExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Mts3Listener ) ((Mts3Listener)listener).enterBinaryExpr(this);
		}

	}
	public static class LiteralExprContext extends ExprContext {
		public LiteralContext Literal;
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public LiteralExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Mts3Listener ) ((Mts3Listener)listener).enterLiteralExpr(this);
		}

	}
	public static class VarargsExprContext extends ExprContext {
		public VarargsExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Mts3Listener ) ((Mts3Listener)listener).enterVarargsExpr(this);
		}

	}
	public static class AssignmentExprContext extends ExprContext {
		public VarContext Var;
		public ExprContext Expr;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public AssignmentExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Mts3Listener ) ((Mts3Listener)listener).enterAssignmentExpr(this);
		}

	}
	public static class EnclosedExprContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public EnclosedExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Mts3Listener ) ((Mts3Listener)listener).enterEnclosedExpr(this);
		}

	}
	public static class ConditionalExprContext extends ExprContext {
		public ExprContext Left;
		public Token Operator;
		public ExprContext Right;
		public List<? extends ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ConditionalExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Mts3Listener ) ((Mts3Listener)listener).enterConditionalExpr(this);
		}

	}
	public static class UnaryExprContext extends ExprContext {
		public Token Operator;
		public ExprContext Expr;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public UnaryExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Mts3Listener ) ((Mts3Listener)listener).enterUnaryExpr(this);
		}

	}
	public static class LogicalExprContext extends ExprContext {
		public ExprContext Left;
		public Token Operator;
		public ExprContext Right;
		public List<? extends ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public LogicalExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Mts3Listener ) ((Mts3Listener)listener).enterLogicalExpr(this);
		}

	}
	public static class PrefixExprContext extends ExprContext {
		public NameAndArgsContext nameAndArgs;
		public List<NameAndArgsContext> Calls = new ArrayList<NameAndArgsContext>();
		public NameAndArgsContext nameAndArgs(int i) {
			return getRuleContext(NameAndArgsContext.class,i);
		}
		public VarOrExprContext varOrExpr() {
			return getRuleContext(VarOrExprContext.class,0);
		}
		public List<? extends NameAndArgsContext> nameAndArgs() {
			return getRuleContexts(NameAndArgsContext.class);
		}
		public PrefixExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Mts3Listener ) ((Mts3Listener)listener).enterPrefixExpr(this);
		}

	}
	public static class TableConstructorExprContext extends ExprContext {
		public TableCtorContext tableCtor() {
			return getRuleContext(TableCtorContext.class,0);
		}
		public TableConstructorExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Mts3Listener ) ((Mts3Listener)listener).enterTableConstructorExpr(this);
		}

	}

	@RuleVersion(0)
	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_expr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				_localctx = new AssignmentExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(60); ((AssignmentExprContext)_localctx).Var = var();
				setState(61); match(EQUALS);
				setState(62); ((AssignmentExprContext)_localctx).Expr = expr(11);
				}
				break;

			case 2:
				{
				_localctx = new UnaryExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(64);
				((UnaryExprContext)_localctx).Operator = _input.LT(1);
				_la = _input.LA(1);
				if ( !(((((_la - 23)) & ~0x3f) == 0 && ((1L << (_la - 23)) & ((1L << (NOT - 23)) | (1L << (MINUS - 23)) | (1L << (NUMSIGN - 23)))) != 0)) ) {
					((UnaryExprContext)_localctx).Operator = _errHandler.recoverInline(this);
				}
				consume();
				setState(65); ((UnaryExprContext)_localctx).Expr = expr(7);
				}
				break;

			case 3:
				{
				_localctx = new EnclosedExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(66); match(ROUND_OPEN);
				setState(67); expr(0);
				setState(68); match(ROUND_CLOSE);
				}
				break;

			case 4:
				{
				_localctx = new LiteralExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(70); ((LiteralExprContext)_localctx).Literal = literal();
				}
				break;

			case 5:
				{
				_localctx = new VarargsExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(71); match(VARARGS);
				}
				break;

			case 6:
				{
				_localctx = new FunctionDefinitionExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(72); match(FUNCTION);
				setState(73); ((FunctionDefinitionExprContext)_localctx).Body = funcBody();
				}
				break;

			case 7:
				{
				_localctx = new PrefixExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(74); varOrExpr();
				setState(78);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(75); ((PrefixExprContext)_localctx).nameAndArgs = nameAndArgs();
						((PrefixExprContext)_localctx).Calls.add(((PrefixExprContext)_localctx).nameAndArgs);
						}
						} 
					}
					setState(80);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				}
				}
				break;

			case 8:
				{
				_localctx = new TableConstructorExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(81); tableCtor();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(107);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(105);
					switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
					case 1:
						{
						_localctx = new BinaryExprContext(new ExprContext(_parentctx, _parentState));
						((BinaryExprContext)_localctx).Left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(84);
						if (!(precpred(_ctx, 8))) throw new FailedPredicateException(this, "precpred(_ctx, 8)");
						setState(85); ((BinaryExprContext)_localctx).Operator = match(POW);
						setState(86); ((BinaryExprContext)_localctx).Right = expr(8);
						}
						break;

					case 2:
						{
						_localctx = new BinaryExprContext(new ExprContext(_parentctx, _parentState));
						((BinaryExprContext)_localctx).Left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(87);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(88);
						((BinaryExprContext)_localctx).Operator = _input.LT(1);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MUL) | (1L << DIV) | (1L << MOD))) != 0)) ) {
							((BinaryExprContext)_localctx).Operator = _errHandler.recoverInline(this);
						}
						consume();
						setState(89); ((BinaryExprContext)_localctx).Right = expr(7);
						}
						break;

					case 3:
						{
						_localctx = new BinaryExprContext(new ExprContext(_parentctx, _parentState));
						((BinaryExprContext)_localctx).Left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(90);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(91);
						((BinaryExprContext)_localctx).Operator = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==PLUS || _la==MINUS) ) {
							((BinaryExprContext)_localctx).Operator = _errHandler.recoverInline(this);
						}
						consume();
						setState(92); ((BinaryExprContext)_localctx).Right = expr(6);
						}
						break;

					case 4:
						{
						_localctx = new BinaryExprContext(new ExprContext(_parentctx, _parentState));
						((BinaryExprContext)_localctx).Left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(93);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(94); ((BinaryExprContext)_localctx).Operator = match(CONCAT);
						setState(95); ((BinaryExprContext)_localctx).Right = expr(4);
						}
						break;

					case 5:
						{
						_localctx = new LogicalExprContext(new ExprContext(_parentctx, _parentState));
						((LogicalExprContext)_localctx).Left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(96);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(97);
						((LogicalExprContext)_localctx).Operator = _input.LT(1);
						_la = _input.LA(1);
						if ( !(((((_la - 53)) & ~0x3f) == 0 && ((1L << (_la - 53)) & ((1L << (CMP_EQUAL - 53)) | (1L << (CMP_NEQUAL - 53)) | (1L << (CMP_LEQUAL - 53)) | (1L << (CMP_GEQUAL - 53)) | (1L << (LESS - 53)) | (1L << (GREATER - 53)))) != 0)) ) {
							((LogicalExprContext)_localctx).Operator = _errHandler.recoverInline(this);
						}
						consume();
						setState(98); ((LogicalExprContext)_localctx).Right = expr(4);
						}
						break;

					case 6:
						{
						_localctx = new ConditionalExprContext(new ExprContext(_parentctx, _parentState));
						((ConditionalExprContext)_localctx).Left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(99);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(100); ((ConditionalExprContext)_localctx).Operator = match(AND);
						setState(101); ((ConditionalExprContext)_localctx).Right = expr(3);
						}
						break;

					case 7:
						{
						_localctx = new ConditionalExprContext(new ExprContext(_parentctx, _parentState));
						((ConditionalExprContext)_localctx).Left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(102);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(103); ((ConditionalExprContext)_localctx).Operator = match(OR);
						setState(104); ((ConditionalExprContext)_localctx).Right = expr(2);
						}
						break;
					}
					} 
				}
				setState(109);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class LiteralContext extends ParserRuleContext {
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
	 
		public LiteralContext() { }
		public void copyFrom(LiteralContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StringLiteralContext extends LiteralContext {
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public StringLiteralContext(LiteralContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Mts3Listener ) ((Mts3Listener)listener).enterStringLiteral(this);
		}
